--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +14,7 @@
         <input id="adultos" name="adultos" type="number" placeholder="Adultos">
         <input id="criancas" name="criancas" type="number" placeholder="Crianças">
         <input id="duracao" name="duracao" type="number" placeholder="Duração (h)">
-        <button>Calcular</button>
+        <button onclick="calcular()">Calcular</button>
 
         <div id="resultado">
 
